####### kdevelop will overwrite this part!!! (begin)##########
noinst_LIBRARIES = libthermometer.a

INCLUDES = -I$(top_srcdir)/kame \
	-I$(top_srcdir)/kame/thermometer \
	-I$(top_builddir)/kame/thermometer/forms \
	$(all_includes)

libthermometer_a_METASOURCES = AUTO

libthermometer_a_SOURCES = \
	caltable.cpp caltable.h \
	thermometer.cpp thermometer.h 

####### kdevelop will overwrite this part!!! (end)############

SUBDIRS = forms
METASOURCES = AUTO
